--- a/themes/omekahispanicliverpool/css/styles.css
+++ b/themes/omekahispanicliverpool/css/styles.css
@@ -122,7 +122,6 @@ header section {
 
 img {
   display: block;
-  position: absolute;
   top: 0;
   height: auto;
   overflow: hidden;
@@ -131,9 +130,7 @@ img {
 input {
   display: block;
   float: left;
-  width: 295px;
-  height: 4.231em;
-  padding: 0 0.769em;
+  padding: 5px 2px;
   background-color: #ee5188;
   font-size: 1em;
   line-height: 1.38;
@@ -231,6 +228,7 @@ section {
 }
 
 .featured-collection {
+	text-align: center;
   position: absolute;
   top: 0;
   left: 67.5027262813%;
@@ -268,12 +266,14 @@ section {
 }
 
 .featured-item {
+	text-align: center;
   position: absolute;
   top: 0;
   left: -0.0034078517%;
   z-index: 17;
   width: 32.3660714285%;
   height: 23em;
+  overflow: hidden;
 }
 
 .featured-item .black-bar {
@@ -476,7 +476,7 @@ section {
   width: 915px;
   height: 4.231em;
   margin: 1.154em auto 0;
-  background-color: #a22752;
+  background-color: #a32752;
 }
 
 .site_title {
@@ -536,9 +536,7 @@ section {
 	font-weight: 700;
 }
 
-#primary p{
-	text-align: center;
-}
+
 
 /* =====Styles for Contact Us page====*/
 #form-instructions{
@@ -560,9 +558,20 @@ section {
 	height: 400px;
 }
 
+#contact-form input{
+	width: 300px;
+	background-color: #ffffff;
+}
+
+#contact-form #send{
+	background-color: #ee5188;
+	position:absolute;
+	top: 580px;
+	left: 280px;
+	height: 50px;
+}
+
 fieldset {
-  width: 66.0416666666%;
-  margin-right: auto;
   margin-left: auto;
 }
 
@@ -572,10 +581,6 @@ form {
   margin: 0 auto;
 }
 
-.field .inputs {
-  float: right;
-
-}
 
 .field-1 {
   width: 80.2858903265%;
@@ -645,7 +650,8 @@ form {
 
 #recaptcha_widget_div{
 	position:absolute;
-	left: 360px;
+	left: 270px;
+	top: 540px;
 }
 
 #recaptcha_response_field{
@@ -687,12 +693,19 @@ em{
 	float: left;
 }
 
+.searchbar input{
+	width: 300px;
+	height: 45px;
+}
+
 /* ====Styles for Search Bar END=====*/
 
 /* ====Styles for Contribution Page=====*/
 
 #contribution-item-metadata{
 	text-align: center;
+	width: 595px;
+	margin: 0 auto;
 }
 
 
@@ -725,13 +738,26 @@ select {
     select {padding-right:18px}
 }
 
-#contribution-confirm-submit .inputs{
-	float:left;
-	display:inline-block;
+#contribution-confirm-submit input{
+	margin-right: 10px;
+}
+
+#contribution-confirm-submit{
+	height: 150px;
+	width: 595px;
+	margin: 0 auto;
+}
+
+#contribution-confirm-submit #form-submit{
+	width: 200px;
+	height: 50px;
+	position:absolute;
+	left: 380px;
 }
 
 #contribution-type-form{
 	padding-top: 30px;
+	text-align: center;
 	color: black;
 }
 
@@ -815,7 +841,7 @@ select {
 }
 
 #fieldset-login .field{
-	padding-bottom: 80px;
+	padding-bottom: 50px;
 }
 
 #login-form input{
@@ -830,10 +856,41 @@ select {
 	min-height: 400px;
 }
 
+#login-links{
+	text-align: center;
+}
+
+#fieldset-login{
+	position:absolute;
+	left: 250px;
+}
+
+#login-form #submit{
+	position:absolute;
+	top: 200px;
+	width: 300px;
+	height: 50px;
+}
+
 /* ====Styles for Login Page END=====*/
 
-/* ====Styles for Forgot Password Page=====*/
+/* ====Styles for Tags Cloud=====*/
 
+.hTagcloud li{
+	float:left;
+	padding-right: 5px;
+	padding-top: 10px;
+}
 
+.hTagcloud li a{
+		color: #ffffff; 
+		background-color: #ee5188;
+		border-radius: 5px;
+		padding: 3px; 
+		font-weight: 400;
+}
 
-/* ====Styles for Forgot Password Page END=====*/
+.hTagcloud li a:hover{
+	background-color: #f46b9b;
+}
+/* ====Styles for Tags Cloud END=====*/
